# rupiah-digital

./: .gitignore  README.md  confidential-transfer-commands.sh  confidential_transfer.ts  create_confidential_mint.ts  idrs.json  index.html  package-lock.json  package.json  tailwind.config.ts  test-confidential-transfer.ts
confidential_transfer_client/: Cargo.toml
confidential_transfer_client/src/: main.rs
idrs/: Anchor.toml
idrs/programs/idrs/: Cargo.toml
idrs/tests/: idrs.ts
public/: index.html
src/: App.tsx  index.css
src/components/: AboutSection.tsx  CTASection.tsx  DashboardLayout.tsx  DashboardNavbar.tsx  FeaturesSection.tsx  FloatingActionButton.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  RecentActivity.tsx  RoadmapSection.tsx  RouteGuard.tsx  SolanaKeyManager.tsx  TransactionHistory.tsx  UseCasesSection.tsx  WalletCard.tsx
src/components/admin/: TreasuryWalletManager.tsx
src/components/dashboard/: OverviewTab.tsx  WalletTab.tsx
src/components/modals/: MintDialog.tsx  ReceiveDialog.tsx  RedeemDialog.tsx  SendDialog.tsx
src/components/profile/: BankAccountForm.tsx  ExternalWalletForm.tsx
src/components/ui/: spinner.tsx
src/contexts/: AuthContext.tsx
src/pages/: Compliance.tsx  Cookies.tsx  Dashboard.tsx  ForgotPassword.tsx  Index.tsx  Legal.tsx  Login.tsx  PrivacyPolicy.tsx  Profile.tsx  Register.tsx  Settings.tsx  Swap.tsx  TermsOfService.tsx  Transactions.tsx  Wallet.tsx  Whitepaper.tsx
src/services/: solanaRpcService.ts  transactionService.ts  treasuryService.ts  walletService.ts
supabase/: config.toml
(+9 files in other folders)
